test/TestPhases/causality/invalid/inputOutputAliasing.blc
module

activity A(x: bool)(y: bool)
    var z: bool
    cobegin
        z = x
    with
        y = z
    end
    await true
end

activity main () ()
    var x: bool
    var y: bool
    run A (x)(x)
end
